package com.techstroy.ticket;

import com.techstroy.client.Client;

public class TicketApplyForVisa extends Ticket {

    public TicketApplyForVisa(int id, Client client) {
        super(id, client);
    }
}
