package com.techstroy.ticket;

import com.techstroy.client.Client;

public class TicketReceiveCertificate extends Ticket{
    public TicketReceiveCertificate(int id, Client client) {
        super(id, client);
    }
}
